[metadata]
name = wiki_nodes
version = attr: wiki_nodes.__version__.__version__
description = Wiki Nodes
url = https://github.com/dskrypa/wiki_nodes
project_urls =
    Source = https://github.com/dskrypa/wiki_nodes
license = Apache 2.0
license_files = LICENSE
long_description = file: readme.rst
long_description_content_type = text/x-rst
author = Doug Skrypa
author_email = dskrypa@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10


[options]
packages = find:
package_dir = = lib
python_requires = >=3.9
tests_require = testtools; coverage; rich
install_requires =
    db_cache @ git+https://github.com/dskrypa/db_cache
    requests_client @ git+https://github.com/dskrypa/requests_client
    requests
    wikitextparser

[options.packages.find]
where = lib

[options.extras_require]
wcwidth = wcwidth
